--- a/mernapp/backend/package.json
+++ b/mernapp/backend/package.json
@@ -9,11 +9,12 @@
   "author": "Subrat",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.9"
   }
 }
