--- a/mernapp/backend/package.json
+++ b/mernapp/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
