--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "backend": "file:..",
     "bootstrap": "^5.3.3",
     "bootstrap-dark-5": "^1.1.3",
     "react": "^18.3.1",
