--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon backend/index.js",
-    "build" : "npm install && npm install --prefix frontend && npm run build --prefix frontend",
-    "start" : "nodemon backend/index.js",
+    "dev": "nodemon backend/index.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "nodemon backend/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Subrat",
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
